<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="3dp">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="0.0px"
        android:clipToPadding="false"
        android:clipChildren="false"
        app:cardElevation="10dp"
        android:layout_margin="4dp"
        app:cardPreventCornerOverlap="false"
        app:cardCornerRadius="4dp"
        android:id="@+id/userCardView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:layout_margin="2dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/EmailView"
            android:text="@string/useremail_domain_com"
            android:fontFeatureSettings="@string/password"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/NameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/EmailView"
            android:fontFeatureSettings="@string/password"
            android:text="@string/username_of_him_her"
            android:textSize="18sp"
            android:textStyle="bold" />

            <CheckBox
                android:id="@+id/deleteCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-35dp"
                android:layout_toEndOf="@id/EmailView"
                android:visibility="visible" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>


</RelativeLayout>